# velvet_fingers

./: LICENSE  README.md
experiment_console/: CMakeLists.txt  package.xml
experiment_console/launch/: asus_frames.launch  structure_frames.launch  structure_io.launch  velvet_experiment.launch
experiment_console/msg/: ExperimentResult.msg
experiment_console/scripts/: startCamera.sh
experiment_console/src/: console.cc  ft_dumper.cc
experiment_console/srv/: SetOutfile.srv
ft_msgs/: CMakeLists.txt  package.xml
ft_msgs/msg/: FTArray.msg  FTData.msg
velvet_fingers_control/: .project  CMakeLists.txt  package.xml
velvet_fingers_control/config/: velvet_fingers_control.yaml
velvet_fingers_control/include/gazebo_mimic_plugin/: mimic_plugin.h
velvet_fingers_control/launch/: velvet_fingers_control.launch  velvet_fingers_effort_pos_control.perspective  velvet_fingers_forward_pos_control.perspective  velvet_fingers_forward_vel_control.perspective
velvet_fingers_control/src/gazebo_mimic_plugin/: mimic_plugin.cpp
velvet_fingers_description/: CMakeLists.txt  package.xml
velvet_fingers_description/gazebo/: gazebo.urdf.xacro
velvet_fingers_description/launch/: velvet_fingers.rviz  velvet_fingers_rviz.launch
velvet_fingers_description/meshes/: velvet_fingers_left.stl  velvet_fingers_palm.stl  velvet_fingers_right.stl
velvet_fingers_description/urdf/: materials.xacro  velvet_fingers.gazebo.xacro  velvet_fingers.transmission.xacro  velvet_fingers.urdf.xacro  velvet_fingers.xacro
velvet_fingers_gazebo/: CMakeLists.txt  package.xml
velvet_fingers_gazebo/launch/: velvet_fingers_world.launch
velvet_fingers_gazebo/worlds/: velvet_fingers.world
velvet_fingers_launch/: CMakeLists.txt  package.xml
velvet_interface_node/: CMakeLists.txt  package.xml
velvet_interface_node/cfg/: velvet_node.cfg
velvet_interface_node/launch/: velvet_ft.launch  velvet_node.launch  velvet_node_hwifce.launch
velvet_interface_node/scripts/: setTTY
velvet_interface_node/src/: velvet_node.cc
velvet_interface_node/src/velvet_interface_node/cfg/: velvet_nodeConfig.py
velvet_interface_node/srv/: SmartGrasp.srv  VelvetToPos.srv
velvet_msgs/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
velvet_msgs/msg/: ContactPoint.msg  ContactPointArray.msg  CurrentState.msg  EncoderState.msg  GripperState.msg  VNodeState.msg  VNodeTarget.msg
velvet_msgs/srv/: SetCur.srv  SetPID.srv  SetPos.srv  SetVel.srv
